--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
+<!DOCTYPE html>
+<html> 
 
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>Revive and Thrive</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
+</head>
+
+
+  
+<body>
+  <nav class="navbar">
+    <ul>
+      <li> <a  href="index.html">Home Page </a></li>
+      <li> <a  href="about.html">About </a></li>
+      <li> <a  href="product.html">Products </a></li>
+      <li> <a  href="blogs.html">Blogs </a></li>
+      <li> <a  href="contact.html">Contact </a></li>
+    </ul>
+  </nav> 
+
+  
+
+  
+</body>
+
+</html> 
